--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #fff;
+		color: #383535;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
@@ -122,6 +122,16 @@ input, select, textarea {
 		text-decoration: none;
 		position: relative;
 	}
+	
+	.icon.fa-envelope-o{
+		color:#C63D2D;
+	}
+	.icon.fa-linkedin{
+		color:#4875B4;
+	}
+	.icon.fa-github{
+		color:#2B4964;
+	}
 
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
@@ -135,6 +145,7 @@ input, select, textarea {
 		.icon > .label {
 			display: none;
 		}
+		
 
 /* Wrapper */
 
@@ -194,10 +205,10 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-		-moz-animation: bg 120s linear infinite;
-		-webkit-animation: bg 120s linear infinite;
-		-ms-animation: bg 120s linear infinite;
-		animation: bg 120s linear infinite;
+		-moz-animation: bg 200s linear infinite;
+		-webkit-animation: bg 180s linear infinite;
+		-ms-animation: bg 150s linear infinite;
+		animation: bg 200s linear infinite;
 		-moz-backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
@@ -208,7 +219,7 @@ input, select, textarea {
 		transform: translate3d(0,0,0);
 	/* Set your background with this */
 
-		background: #348cb2 url("images/bg1.jpg") bottom left;
+		background:#f9f9f9 url("images/bg12.jpg") bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
@@ -367,7 +378,10 @@ input, select, textarea {
 		}
 		
 	#profile_img{
-		border-radius:50%;
+		border-radius:100%;
+		height: 3.5em;
+		top: 0;
+		width: 3.5em;
 	}
 
 /* Header */
@@ -678,7 +692,7 @@ input, select, textarea {
 				}
 
 					#header nav a:hover:before {
-						background-color: rgba(255, 255, 255, 0.175);
+						background-color: rgba(1, 1, 1, 0.175);
 						color: #fff;
 					}
 
@@ -688,7 +702,7 @@ input, select, textarea {
 				}
 
 					#header nav a:active:before {
-						background-color: rgba(255, 255, 255, 0.35);
+						background-color: rgba(1, 255, 255, 0.35);
 						color: #fff;
 					}
 
@@ -710,6 +724,7 @@ input, select, textarea {
 		line-height: 8em;
 		position: absolute;
 		text-align: center;
+		color:#f0f8ff;
 		width: 100%;
 	}
 
